Take the selected state of the tab into account for the text color.

Apply the tab selected state color into account in order to calculate the
proper contrast for the tab's text and icons.

Bug: 876794
Change-Id: Ie0db7e6eb5cd93c7b7d34098c88e9f06ff355d4d
Reviewed-on: https://chromium-review.googlesource.com/1188434
Commit-Queue: Peter Kasting <pkasting@chromium.org>
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585996}
Former-commit-id: 633a77ea42c1d12705d06c28c321865110645c31