chrome/browser/ui/views/tabs/tab.h
@@ -139,6 +139,9 @@ class Tab : public gfx::AnimationDelegate,
   // Called when the frame state color changes.
   void FrameColorsChanged();
 
+  // Called with the selected state changes.
+  void SelectedStateChanged();
+
   // Returns true if the tab is selected.
   bool IsSelected() const;
 
